--- a/GlenEdenTakeways/Views/Home/Index.cshtml
+++ b/GlenEdenTakeways/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Glen Eden Takeaways!</h1>
+    <p>Use this website to find out information about Glen Eden Takeaways, view our menu, create an order, and many more!</p>
+   
 </div>
