--- a/GlenEdenTakeways/Views/Home/Privacy.cshtml
+++ b/GlenEdenTakeways/Views/Home/Privacy.cshtml
@@ -3,4 +3,10 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>At Glen Eden Takeaways, we are committed to protecting your privacy and ensuring the security of your personal information. This privacy policy outlines how we collect, use, and safeguard the data you provide to us when using our website.</p>
+<p>When you place an order through our system, we may collect certain personal information such as your name, contact details, and payment information. This information is necessary to process your order and to communicate with you. Rest assured that we handle your personal data with utmost care and only use it for the purposes mentioned herein.</p>
+<p>By using our website, you consent to the collection, use, and storage of your personal information.</p>
+<p>Thank you for choosing Glen Eden Takeaways. We value your trust and will continue to prioritse the protection of your privacy.</p>
+
+
+
