--- a/GlenEdenTakeways/Views/Menus/Index.cshtml
+++ b/GlenEdenTakeways/Views/Menus/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Menu</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -30,7 +30,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
-            <td>
+           <td>
                 <a asp-action="Edit" asp-route-id="@item.MenuId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.MenuId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.MenuId">Delete</a>
