added code comments, changed authorisation for customers, only create, edit and delete are authorised, added search string

--- a/GlenEdenTakeways/Views/Menus/Index.cshtml
+++ b/GlenEdenTakeways/Views/Menus/Index.cshtml
@@ -9,6 +9,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+@*create input field*@
+<form asp-controller="Menus" asp-action="Index">
+    <p>
+        Menu Item: <input type="text" name="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
