--- a/GlenEdenTakeways/Views/Customers/Index.cshtml
+++ b/GlenEdenTakeways/Views/Customers/Index.cshtml
@@ -9,12 +9,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+@*create input field*@
 <form asp-controller="Customers" asp-action="Index">
     <p>
         Name: <input type="text" name="SearchString" />
         <input type="submit" value="Filter" />
     </p>
 </form>
+
 <table class="table">
     <thead>
         <tr>
@@ -75,3 +78,5 @@
 }
     </tbody>
 </table>
+
+
