--- a/GlenEdenTakeways/Views/Payments/Create.cshtml
+++ b/GlenEdenTakeways/Views/Payments/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
+                <label asp-for="CustomerId" class="control-label">Customer</label>
                 <input asp-for="CustomerId" class="form-control" />
                 <span asp-validation-for="CustomerId" class="text-danger"></span>
             </div>
@@ -33,7 +33,7 @@
                 <span asp-validation-for="TotalAmount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PaymentTypeId" class="control-label"></label>
+                <label asp-for="PaymentTypeId" class="control-label">Payment Type</label>
                 <input asp-for="PaymentTypeId" class="form-control" />
                 <span asp-validation-for="PaymentTypeId" class="text-danger"></span>
             </div>
