--- a/GlenEdenTakeways/Views/Payments/Index.cshtml
+++ b/GlenEdenTakeways/Views/Payments/Index.cshtml
@@ -9,6 +9,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+@*create input field*@
+<form asp-controller="Payments" asp-action="Index">
+    <p>
+        Payment Date: <input type="text" name="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
