edited the home page text

--- a/GlenEdenTakeways/Views/Home/Index.cshtml
+++ b/GlenEdenTakeways/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Glen Eden Takeaways!</h1>
-    <p>Use this website to find out information about Glen Eden Takeaways, view our menu, create an order, and many more!</p>
+    <p>Use this website to find out information about Glen Eden Takeaways, view our menu, view our customers, and many more!</p>
     <img src="~/images/untitled_logo_2_free-file.jpg" alt="Glen Eden Takeaways Logo" style="width: 270px; height: 230px;" />
 </div>
