fixed error in orders table

--- a/GlenEdenTakeways/Views/Payments/Index.cshtml
+++ b/GlenEdenTakeways/Views/Payments/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OrderItemId)
+                @Html.DisplayNameFor(model => model.OrderId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PaymentDate)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Customer.FullName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OrderItemId)
+                @Html.DisplayFor(modelItem => item.OrderId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PaymentDate)
