--- a/GlenEdenTakeways/Views/Payments/Create.cshtml
+++ b/GlenEdenTakeways/Views/Payments/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="CustomerId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OrderItemId" class="control-label"></label>
-                <input asp-for="OrderItemId" class="form-control" />
-                <span asp-validation-for="OrderItemId" class="text-danger"></span>
+                <label asp-for="OrderId" class="control-label"></label>
+                <input asp-for="OrderId" class="form-control" />
+                <span asp-validation-for="OrderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PaymentDate" class="control-label"></label>
