--- a/GlenEdenTakeways/Views/Payments/Delete.cshtml
+++ b/GlenEdenTakeways/Views/Payments/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.CustomerId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderItemId)
+            @Html.DisplayNameFor(model => model.OrderId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderItemId)
+            @Html.DisplayFor(model => model.OrderId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PaymentDate)
