changed the menu

--- a/GlenEdenTakeways/Views/Menus/Index.cshtml
+++ b/GlenEdenTakeways/Views/Menus/Index.cshtml
@@ -13,7 +13,7 @@
 @*create input field*@
 <form asp-controller="Menus" asp-action="Index">
     <p>
-        Menu Item: <input type="text" name="SearchString" />
+        Price: <input type="text" name="SearchString" />
         <input type="submit" value="Filter" />
     </p>
 </form>
